Fix Anchor Overflow Issue and Change Header Color

--- a/css/home-not-logged-in.styl
+++ b/css/home-not-logged-in.styl
@@ -316,11 +316,11 @@ $flex-section
       padding 2em
 
     h1
-      color: DARK-BLUE
+      color: DARK-BLUE-GREEN
       margin: 20px auto
 
     h2, h2 a
-      color: DARK-BLUE
+      color: DARK-BLUE-GREEN
       margin: 20px auto
       font-size: 20px
       text-decoration: none
@@ -354,8 +354,11 @@ $flex-section
 
             h3, p
               a
-                text-decoration: none
                 color: inherit
+                display: block
+                overflow: hidden
+                text-decoration: none
+                text-overflow: ellipses
 
         .home-social-timestamp
           margin: 0.5em 0
